--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -36,4 +36,15 @@
       transform: rotate(360deg);
     }
   }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
   
+  .content {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+  }
